discussion/kv_engine/184517/184517_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus.

    ./mcstat --json 'threads details'
    {
      "details": {
        "89513": {
        "name": "memcached",
        "system": 110,
        "user": 1070
      },
    [... cut ...]

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-09 10:33:22.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 10:53:34.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22388/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
            sigar::iterate_threads([&json, &pid](auto tid,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:246:24: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
                sigar::iterate_threads([&kvCollector](auto tid,
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22388/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22388/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51723/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/protocol/mcbp/stats_context.cc(612): error C2039: "iterate_threads": is not a member of "sigar" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51723/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43425/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43425/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32852/ : FAILURE

Compile error at [2023-01-09T10:50:23.857Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32852/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23962/ : FAILURE

Compile error at [2023-01-09T10:48:32.116Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23962/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1151/ : FAILURE

Compile error at [2023-01-09T10:42:54.884Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1151/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12109/ : FAILURE

Compile error at [2023-01-09T10:42:20.543Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12109/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24432/ : FAILURE

Compile error at [2023-01-09T10:46:47.744Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24432/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12196/ : FAILURE

Compile error at [2023-01-09T10:42:26.774Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12196/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24856/ : FAILURE

Compile error at [2023-01-09T10:45:34.893Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24856/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25716/ : FAILURE

Compile error at [2023-01-09T10:44:33.634Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25716/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22027/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
